packages/core/src/components/modal-content/modal-content.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
@import 'mixins/shadow-dom/component';

:host {
  @include ix-component;

  display: block;
  position: relative;
  overflow: auto;
  padding: 0.125rem 0.625rem 0.125rem 0.625rem;
}

